prace nad refactorem kodu, DriverFactory + prace nad umozliwieniem pobierania lokalnego w teście